- Fixed balance display on mobile devices - Fixed styles AuctionBetHistory.css

--- a/src/components/pages/auction/auctionId/auctionBetHistory/AuctionBetHistory.css
+++ b/src/components/pages/auction/auctionId/auctionBetHistory/AuctionBetHistory.css
@@ -26,6 +26,7 @@
     min-width: 100px;
     max-width: 150px;
     width: 100%;
+    margin-right: 10px;
 }
 
 .historyInfo {
